# autonomous-enterprise-manager

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPOSITORY_RELEASE_AUDIT.md  SECURITY.md  check_workflow.py  docker-compose.production.yml  docker-compose.yml  fetch_runs.py  main.py  monitor.py  pyproject.toml  walkthrough.md
apps/backend/: .coverage  .dockerignore  .env_example  Dockerfile  migrate.py  mypy_errors.txt  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 1bb984a640b4_add_collaboration_models.py  8b76718ce3b8_add_governance_workflow_states.py  98551d2206c1_add_tenant_id_to_workflows.py  a1b2c3d4e5f6_add_tenant_id_to_memory_objects.py  f5d4ff42b249_initial_workflows_schema.py
apps/backend/app/: main.py
apps/backend/app/agents/base/: base_agent.py  capabilities.py  output.py  profile.py  registry.py  task.py
apps/backend/app/agents/executives/: __init__.py  enterprise_agents.py  external_agent.py  factory.py
apps/backend/app/agents/supervisor/: execution_monitor.py  planner.py  recovery_engine.py  router.py  schemas.py  supervisor_agent.py  task_decomposer.py
apps/backend/app/api/a2a/: server.py
apps/backend/app/api/mcp/: server.py
apps/backend/app/configuration/: config_metadata_platform.py
apps/backend/app/core/: config.py  constants.py  database.py  exceptions.py
apps/backend/app/decisions/: decision_platform.py
apps/backend/app/graph/: __init__.py  builder.py  context_builder.py  dependencies.py  registry.py  router.py  state.py
apps/backend/app/models/: __init__.py  memory.py  security.py  synchronization.py
apps/backend/app/plugins/: plugin_sdk.py
apps/backend/app/repositories/: conversation_repository.py  memory_repository.py  message_repository.py  session_repository.py  summary_repository.py
apps/backend/app/runtime/: __init__.py  engine.py  manager.py  models.py  pre_execution.py
apps/backend/app/scheduler/: scheduler_service.py
apps/backend/app/schemas/: agent.py  chat.py  github.py  memory.py  search.py
apps/backend/app/services/: chat_service.py  memory_service.py
apps/backend/evaluation/: regression.py  runner.py  scenarios.py
apps/backend/evaluation/intelligence/: capability.py  executive.py  memory.py  rag.py  supervisor.py
apps/backend/evaluation/performance/: cost.py  latency.py  resources.py  scalability.py
apps/backend/evaluation/reports/: generator.py
apps/backend/evaluation/utils/: metrics.py  timer.py
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: test_api_chat.py  test_api_github.py  test_api_memory.py  test_api_search.py  test_api_upload.py  test_collaboration.py
apps/backend/tests/release/: test_release_aws.py  test_release_deployment.py  test_release_integrations.py  test_release_security.py  test_release_workflows.py
apps/backend/tests/unit/: test_capability_framework.py  test_chat_service.py  test_context_builder.py  test_context_node.py  test_conversation_repository.py  test_coordinators.py  test_cross_encoder.py  test_cross_encoder_service.py  test_database.py  test_deduplicator.py  test_evaluation.py  test_execution_trace.py  test_executive_framework.py  test_extractor.py  test_governance.py  test_integrations.py  test_langgraph.py  test_llm_service.py  test_memory_service.py  test_message_repository.py  test_messaging.py  test_normalizer.py  test_operations.py  test_pdf_parser.py  test_platform_services.py  test_qdrant_service.py  test_registry.py  test_retrieval_node.py  test_scorer.py  test_session.py  test_summary_repository.py  test_supervisor.py  test_teams.py  test_tool_node.py  test_workflow_runtime.py  test_workspace.py
(+542 files in other folders)
