[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.11",
    "langgraph>=1.2.6",
    "openai>=2.43.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pygithub>=2.9.1",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
