[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt<4.0.0",
    "cryptography>=49.0.0",
    "alembic>=1.16.0",
    "fastapi>=0.138.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.11",
    "langgraph>=1.2.6",
    "openai>=2.43.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-sdk>=1.43.0",
    "passlib>=1.7.4",
    "psutil>=7.2.2",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pygithub>=2.9.1",
    "pyjwt>=2.13.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "reportlab>=5.0.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "mypy>=1.14.0",
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",
    "types-cryptography>=3.3.23",
    "types-requests>=2.31.0",
    "types-psutil>=5.9.5",
    "bandit>=1.9.4",
]

[tool.mypy]
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]
explicit_package_bases = true
namespace_packages = true
mypy_path = "."

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "pandas.*",
    "nest_asyncio.*"
]
ignore_missing_imports = true
